# Glee

./: .env.example  CLAUDE.md  Makefile  README.md  TODO.md  compose.yml  pyproject.toml
docs/: GleeMcpServiceList.md  PRD.md  VISION.md  arbitration.md  coding-agent-hooks.md  continuity-layer.md  memory.md  observability.md  subagents.md  tools.md  warmup.md  workflows.md
docs/agentic-features/: agentic-code-review.md
glee/: cli.py  config.py  dispatch.py  logging.py  mcp_server.py  server.py  session.py  session_summary.py
glee/agents/: base.py  claude.py  codex.py  gemini.py  prompts.py
glee/cli/: connect.py
glee/db/migrations/: env.py
glee/db/migrations/versions/: 001_initial_schema.py  002_logs_table.py
glee/github/: __init__.py  client.py
tests/: test_connect_storage.py
