[project]
name = "glee"
version = "0.1.0"
description = "Multi-Agent Code Collaboration Platform - Multiple AIs working together like a Glee Club"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.5",
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
    "fastapi>=0.128.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.45",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "loguru>=0.7.0",
]

[project.scripts]
glee = "glee.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
