[project]
name = "glee"
version = "0.2.0"
description = "Multi-Agent Code Collaboration Platform - The Conductor for Your AI Orchestra"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CLI
    "typer>=0.15.0",
    "rich>=14.0.0",
    # Orchestration
    "langgraph>=1.0.5",
    # Storage
    "lancedb>=0.20.0",
    "duckdb>=1.2.0",
    "fastembed>=0.5.0",
    # Types & Validation
    "pydantic>=2.12.5",
    # Logging
    "loguru>=0.7.0",
    # Config
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
glee = "glee.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
